feat: update Profile-service and docs research order-service
